# QTReal

./: .gitignore  CMakeLists.txt  README.md  README.sh  auxfunc.cpp  chebcoef.h  compiletest.sh  compiletestMKL.sh  compiletestprof.sh  generator.cpp  grapheneGenerator.h  kpmcallbackfunctions.h  lmpintegration.h.in  mklblas.cpp  moments.h  moments1D.cpp  moments2D.cpp  momentsNEq.cpp  sites.cpp  spatial.cpp  statefactory.h  testDOS.cpp  testSPATIALDOS.cpp  testSPATIALFiniteDOS.cpp  testSPATIALTDGrid.cpp  testSPATIALTimeEv.cpp  testSPATIALTimeEvOptical.cpp  testSPATIALTimeEvOpticalPseudoSpin.cpp  testTimeEvolutionOrbitalTMD.cpp  testTimeEvolutionSpinGrapheneNEQ.cpp  testlammpsERelWForceBACKUP.cpp  testlammpsForcesNeq.cpp  testlammpsNeq.cpp  typedef.h
InputsLammps/: in.graphene  in.grapheneNVECallback  in.grapheneNVERestart  in.grapheneNVT  in.grapheneNoThermostat  in.grapheneNoseHoover  in.graphenecallback
include/: auxfunc.h  blas.h  chebyshevsolver.h  mkl_sparsematrix.h  mklblas.h  moments.h  periodichamiltonian.h  sites.h  sparsematrix.h  spatial.h  statefactory.h  unitary.h
lmp-ompicouple/: CMakeLists.txt  Makefile  error.cpp  error.h  irregular.cpp  irregular.h  lammps_data_write.cpp  many2many.cpp  many2many.h  many2one.cpp  many2one.h  memory.cpp  memory.h  one2many.cpp  one2many.h  send2one.cpp  send2one.h
src/: chebyshevsolver.cpp  eigen_blas.cpp  eigen_sparsematrix.cpp  mkl_blas.cpp  mkl_sparsematrix.cpp  moments.cpp  momentsTD.cpp  periodichamiltonian.cpp  sparsematrix.cpp  testConductivityXY.cpp  testlammpsERelNewIter.cpp  testlammpsERelNewIterBACKUP230123.cpp  testlammpsERelWForce.cpp  testlammpsForcesNeqEqDeparture.cpp  unitary.cpp  vectorfilter.cpp
tests/: testOperatorConductivityXY.cpp  testcouplelammps.cpp  testlammpsDOS.cpp
